--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Info Tec Section -->
   <section id="tec-section">
-    <h2 class="title-tec">As Tecnologias mais soicitadas no mercado, confira o que você irá aprender!</h2>
+    <h2 class="title-tec">As Tecnologias mais solicitadas no mercado, confira o que você irá aprender!</h2>
 
     <div class="container-cards">
       <!-- Cards -->
@@ -40,7 +40,8 @@
           <h2>Notion</h2>
           <img class="logo" src="assets/notion.svg" alt="">
         </div>
-        <p class="card-description">O Notion, uma plataforma versátil e poderosa, redefine a maneira como abordamos a organização e colaboração. Combinando notas, gerenciamento de tarefas, bancos de dados e mais.</p>
+        <p class="card-description">O Notion, uma plataforma versátil e poderosa, redefine a maneira como abordamos a
+          organização e colaboração. Combinando notas, gerenciamento de tarefas, bancos de dados e mais.</p>
       </div>
 
       <div class="card">
@@ -48,7 +49,9 @@
           <h2>NEXT</h2>
           <img class="logo" src="assets/next.svg" alt="">
         </div>
-        <p class="card-description">O framework Next.js, reconhecido por sua robustez, foi concebido para aprimorar aplicações web. Com funcionalidades avançadas e otimizações de desempenho, impulsionando a criação de projetos web modernos e dinâmicos.</p>
+        <p class="card-description">O framework Next.js, reconhecido por sua robustez, foi concebido para aprimorar
+          aplicações web. Com funcionalidades avançadas e otimizações de desempenho, impulsionando a criação de projetos
+          web modernos e dinâmicos.</p>
       </div>
 
       <div class="card">
@@ -96,4 +99,5 @@
 
   <script src="https://unpkg.com/scrollreveal"></script>
 </body>
+
 </html>
