ajustes na resposividade

--- a/index.html
+++ b/index.html
@@ -18,23 +18,28 @@
 
 <body>
   <!-- Hero Section -->
-  <section id="hero-section">
+  <section class="hero-section">
+    <img class="hero-imagem" src="assets/womantech.png"/>
     <div class="hero-content">
-      <img class="logo-hero" src="assets/beets.svg">
-      <h1>Workshop Beets Jr.: Construindo Aplicações Interativas com Next.js e Notion</h1>
-      <h2>Aprenda, Explore, Crie: Desenvolva suas habilidades de programação de forma prática com as tecnologias do
-        momento! </h2>
-      <h3>Salve na agenda: 2 a 6 de outubro! </h3>
-      <button>Garanta seu Lugar!</button>
+      <div class="hero-content-title">
+        <img class="logo-hero" src="assets/beets.svg">
+        <h1>Workshop Beets Jr.: Construindo Aplicações Interativas com Next.js e Notion</h1>
+      </div>
+      <div class="hero-content-description">
+        <h2>Aprenda, Explore, Crie: Desenvolva suas habilidades de programação de forma prática com as tecnologias do
+          momento! </h2>
+        <h3>Salve na agenda: <span class="span">2 a 6 de outubro!</span></h3>
+        <button>Garanta seu Lugar!</button>
+      </div>
     </div>
   </section>
 
   <!-- Info Tec Section -->
-  <section id="tec-section">
+  <section class="tec-section">
     <h2 class="title-tec">As Tecnologias mais solicitadas no mercado, confira o que você irá aprender!</h2>
 
     <div class="container-cards">
-      <!-- Cards -->
+      
       <div class="card">
         <div class="card-title">
           <h2>Notion</h2>
